[gd_scene load_steps=34 format=3 uid="uid://de0pmnn81f0e"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_5jcwf"]
[ext_resource type="Texture2D" uid="uid://dtms5edf3ke5m" path="res://Sprites/Doggo/doggoSpriteSheet.png" id="2_2gpcj"]
[ext_resource type="Script" path="res://Scripts/player_UI.gd" id="3_fo4ap"]
[ext_resource type="Texture2D" uid="uid://xq8ajmmmcjcv" path="res://Tileset/thought.tres" id="3_fwhsp"]
[ext_resource type="Texture2D" uid="uid://dtb7xq3hesl66" path="res://Tileset/meat.png" id="4_x7g4e"]
[ext_resource type="Texture2D" uid="uid://dy6bwpjkn3slj" path="res://Sprites/Items/wood.png" id="5_vj8aq"]
[ext_resource type="Texture2D" uid="uid://cpg45fx4e66k8" path="res://Sprites/Items/item1BIT_shovel.png" id="6_5lx7v"]
[ext_resource type="Texture2D" uid="uid://c65sv6o7qatr8" path="res://Sprites/Doggo/particles.png" id="8_umynj"]
[ext_resource type="PackedScene" uid="uid://deorawfpj56s8" path="res://Scenes/hourglass.tscn" id="9_dnn08"]

[sub_resource type="CircleShape2D" id="CircleShape2D_n5whl"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_526cy"]
radius = 6.0

[sub_resource type="Animation" id="Animation_avjyh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8blob"]
resource_name = "blink"
length = 1.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.44, 0.51, 0.55, 0.61, 0.65, 0.71, 0.75, 0.84, 0.88, 0.96, 1, 1.2, 1.24, 1.46, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xkh5c"]
_data = {
"RESET": SubResource("Animation_avjyh"),
"blink": SubResource("Animation_8blob")
}

[sub_resource type="Animation" id="Animation_44a3l"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("step-particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blood-particles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hourglass:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_bui14"]
resource_name = "death_D"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("step-particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("blood-particles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_vcc12"]
resource_name = "hurt_D"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [29]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blood-particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_oyihg"]
resource_name = "hurt_R"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [30]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blood-particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hourglass:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_63o24"]
resource_name = "hurt_U"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [31]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("blood-particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hourglass:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_sb7xb"]
resource_name = "idle_D"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("step-particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hourglass:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_thbgo"]
resource_name = "idle_R"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("step-particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hourglass:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_t6vnh"]
resource_name = "idle_U"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("step-particles:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("hourglass:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_hvgbq"]
resource_name = "roll_D"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [20, 21, 22]
}

[sub_resource type="Animation" id="Animation_c1wcd"]
resource_name = "roll_R"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [26, 27, 28]
}

[sub_resource type="Animation" id="Animation_2gbvk"]
resource_name = "roll_R_U"
length = 0.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [23, 24, 25]
}

[sub_resource type="Animation" id="Animation_f0n13"]
resource_name = "walk_D"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.15),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_step"
}, {
"args": [],
"method": &"play_step"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("step-particles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hourglass:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rm2v0"]
resource_name = "walk_R"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [10, 11, 12, 13]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.15),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_step"
}, {
"args": [],
"method": &"play_step"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("step-particles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hourglass:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_qkupr"]
resource_name = "walk_U"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [16, 17, 18, 19]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.05, 0.15),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"play_step"
}, {
"args": [],
"method": &"play_step"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("step-particles:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("hourglass:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v4otn"]
_data = {
"RESET": SubResource("Animation_44a3l"),
"death_D": SubResource("Animation_bui14"),
"hurt_D": SubResource("Animation_vcc12"),
"hurt_R": SubResource("Animation_oyihg"),
"hurt_U": SubResource("Animation_63o24"),
"idle_D": SubResource("Animation_sb7xb"),
"idle_R": SubResource("Animation_thbgo"),
"idle_U": SubResource("Animation_t6vnh"),
"roll_D": SubResource("Animation_hvgbq"),
"roll_R": SubResource("Animation_c1wcd"),
"roll_U": SubResource("Animation_2gbvk"),
"walk_D": SubResource("Animation_f0n13"),
"walk_R": SubResource("Animation_rm2v0"),
"walk_U": SubResource("Animation_qkupr")
}

[sub_resource type="Animation" id="Animation_gye8k"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bubble-food:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-20, -33)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bubble-wood:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -33)]
}

[sub_resource type="Animation" id="Animation_khdn4"]
resource_name = "thoughts"
length = 3.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("bubble-food:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1.5, 2.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(-20, -33), Vector2(-18, -35), Vector2(-21, -35), Vector2(-23, -31)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("bubble-wood:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.9, 1.8, 2.7),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -33), Vector2(-1, -31), Vector2(-2, -35), Vector2(2, -31)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4llvt"]
_data = {
"RESET": SubResource("Animation_gye8k"),
"thoughts": SubResource("Animation_khdn4")
}

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_1wuxh"]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 1
particles_anim_loop = false

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 61
motion_mode = 1
script = ExtResource("1_5jcwf")

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_2gpcj")
hframes = 16
vframes = 2

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_n5whl")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_526cy")
debug_color = Color(0.862745, 0.172549, 0.772549, 0.419608)

[node name="PickableBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickableBox"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_526cy")
debug_color = Color(0.862745, 0.172549, 0.772549, 0.419608)

[node name="InteractionBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionBox"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_526cy")
debug_color = Color(0.862745, 0.172549, 0.772549, 0.419608)

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="Effects" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xkh5c")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v4otn")
}

[node name="UI" type="Node2D" parent="."]
script = ExtResource("3_fo4ap")

[node name="sleep_thoughts" type="Node2D" parent="UI"]

[node name="bubble-food" type="Sprite2D" parent="UI/sleep_thoughts"]
visible = false
self_modulate = Color(0.176471, 0.741176, 0.564706, 1)
position = Vector2(-20, -33)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_fwhsp")
offset = Vector2(8, 8)

[node name="food" type="Sprite2D" parent="UI/sleep_thoughts/bubble-food"]
position = Vector2(6.66667, 7.5)
scale = Vector2(0.8, 0.8)
texture = ExtResource("4_x7g4e")

[node name="bubble-wood" type="Sprite2D" parent="UI/sleep_thoughts"]
visible = false
self_modulate = Color(0.176471, 0.741176, 0.564706, 1)
position = Vector2(0, -33)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_fwhsp")
offset = Vector2(8, 8)
flip_h = true

[node name="food" type="Sprite2D" parent="UI/sleep_thoughts/bubble-wood"]
position = Vector2(11.6667, 7.5)
scale = Vector2(0.8, 0.8)
texture = ExtResource("5_vj8aq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/sleep_thoughts"]
libraries = {
"": SubResource("AnimationLibrary_4llvt")
}
autoplay = "thoughts"

[node name="dig_thoughts" type="Node2D" parent="UI"]

[node name="bubble-shovel" type="Sprite2D" parent="UI/dig_thoughts"]
visible = false
self_modulate = Color(0.176471, 0.741176, 0.564706, 1)
position = Vector2(-15, -34)
scale = Vector2(1.2, 1.2)
texture = ExtResource("3_fwhsp")
offset = Vector2(8, 8)

[node name="shovel" type="Sprite2D" parent="UI/dig_thoughts/bubble-shovel"]
position = Vector2(6.66667, 7.5)
scale = Vector2(0.8, 0.8)
texture = ExtResource("6_5lx7v")

[node name="step-particles" type="CPUParticles2D" parent="."]
show_behind_parent = true
material = SubResource("CanvasItemMaterial_1wuxh")
position = Vector2(0, -6)
emitting = false
amount = 3
lifetime = 0.2
explosiveness = 0.75
texture = ExtResource("8_umynj")
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2(0, -1)
spread = 30.0
gravity = Vector2(0, 50)
initial_velocity_min = 10.0
initial_velocity_max = 40.0
scale_amount_min = 4.0
scale_amount_max = 4.0
anim_speed_max = 4.0

[node name="blood-particles" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_1wuxh")
position = Vector2(0, -6)
emitting = false
one_shot = true
explosiveness = 0.75
texture = ExtResource("8_umynj")
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2(0, -1)
spread = 30.0
gravity = Vector2(0, 50)
initial_velocity_min = 40.0
initial_velocity_max = 60.0
scale_amount_min = 3.0
scale_amount_max = 3.0
color = Color(1, 0.4, 0.435294, 1)
anim_speed_max = 4.0

[node name="hourglass" parent="." instance=ExtResource("9_dnn08")]
visible = false
position = Vector2(3.05176e-05, -20)

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="PickableBox" to="." method="_on_pickable_box_area_entered"]
[connection signal="area_entered" from="InteractionBox" to="." method="_on_interaction_box_area_entered"]
[connection signal="area_exited" from="InteractionBox" to="." method="_on_interaction_box_area_exited"]
[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_timer_timeout"]
